# kopipasta

./: .gitignore  AI_CONTEXT.md  LICENSE  README.md  ROADMAP.md  SPEC.md  SYMBOLIC_MAP_SPEC.md  TASK.md  edge_case.py  pyproject.toml  requirements.txt  setup.py
docs/: AST_PATCHING_SPEC.md  SEMANTIC_ARCHITECTURE.md  SKELETON_SPEC.md
kopipasta/: analysis.py  cache.py  claude.py  clipboard.py  config.py  diff.py  file.py  git_utils.py  import_parser.py  logger.py  main.py  mcp_server.py  ops.py  patcher.py  prompt.py  selection.py  session.py  skeleton.py  tree_selector.py  tui.py
tests/: test_file.py  test_fix_workflow.py  test_intelligent_import.py  test_main.py  test_mcp_paths.py  test_mcp_windows.py  test_patcher.py  test_patcher_edge_cases.py  test_patcher_markers.py  test_patcher_nested_markdown.py  test_patcher_raw_diff.py  test_patcher_regex.py  test_patcher_repro.py  test_patcher_repro_failures.py  test_patcher_search_replace.py  test_prompt_generation.py  test_selection.py  test_session_integration.py  test_skeleton.py  test_symbols.py  test_symbols_frontend.py  test_tree_selector.py
