[project]
name = "kopipasta"
version = "0.61.0"
description = "A CLI tool to generate prompts with project structure and file contents"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Mikko Korpela", email = "mikko.korpela@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyperclip==1.9.0",
    "requests==2.32.3",
    "Pygments==2.18.0",
    "rich==13.8.1",
    "click==8.2.1",
    "prompt-toolkit==3.0.52",
    "Jinja2>=3.1.6",
    "structlog>=25.5.0",
    "mcp>=1.26.0",
    "pydantic>=2.12.5",
]

[project.scripts]
kopipasta = "kopipasta.main:main"
kopipasta-mcp = "kopipasta.mcp_server:main"

[project.urls]
Homepage = "https://github.com/mkorpela/kopipasta"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest",
    "mypy>=1.0",
    "ruff>=0.15.1",
]

[tool.hatch.build.targets.wheel]
packages = ["kopipasta"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
